--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"esModuleInterop": true,
 		"allowJs": true,
 		"resolveJsonModule": true,
+		"strictPropertyInitialization": false,
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true  
   },
