--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,15 +4,16 @@
 	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
 	"configurations": [
-	
+		
 		{
 			"type": "node",
 			"request": "attach",
+			"protocol": "inspector",
+			"restart": true,
 			"name": "Launch Program",
 			"skipFiles": [
 				"<node_internals>/**"
-			],
-			"program": "${file}"
+			]
 		}
 	]
 }
